--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,7 @@ title: Maximilian Boll - Frontend Web-Developer - ようこそ
 layout: base
 sitemap:
     priority: 1.0
+menuactive: home
 ---
 
 <div class="content content--wide">
@@ -10,7 +11,7 @@ sitemap:
         <h1>
             <span class="greetings"></span><span class="color-accent">,</span> 
             I&rsquo;m Max<span class="color-accent">!</span><br>
-            Full<span class="color-accent">-</span>Stack Web<span class="color-accent">-</span>Developer
+            Fronend Web<span class="color-accent">-</span>Developer
         </h1>
     </div>
     
