--- a/src/_includes/topbar.njk
+++ b/src/_includes/topbar.njk
@@ -7,6 +7,7 @@
     </label>
     <nav class="main-nav">
       <ul>
+        <li><a href="{{ '/' | url }}" class="main-nav__link{% if menuactive == 'home' %} main-nav__link--active{% endif %}">Home</a></li>
         <li><a href="{{ '/about/' | url }}" class="main-nav__link{% if menuactive == 'about' %} main-nav__link--active{% endif %}">About</a></li>
         <li><a href="{{ '/blog/' | url }}" class="main-nav__link{% if menuactive == 'blog' %} main-nav__link--active{% endif %}">Blog</a></li>
         <li><a href="{{ '/hobbies/' | url }}" class="main-nav__link{% if menuactive == 'hobbies' %} main-nav__link--active{% endif %}">Hobbies</a></li>
