--- a/src/assets/stylesheets/_base.css
+++ b/src/assets/stylesheets/_base.css
@@ -249,6 +249,7 @@ a {
       -webkit-box-orient: vertical;
       text-overflow: ellipsis;
       font-weight: 600;
+      overflow: hidden;
     }
 
     p {
@@ -257,6 +258,7 @@ a {
       display: -webkit-box;
       -webkit-box-orient: vertical;
       text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 
@@ -308,16 +310,54 @@ a {
   }
 }
 
+*:has(.area) {
+  perspective: 500px;
+}
 .area {
   position: relative;
   display: grid;
   grid-template-areas: 'area';
   place-items: center;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  border: 2px solid var(--c-accent);
+  transform: rotateX(calc(1deg * var(--y))) rotateY(calc(-1deg * var(--x)));
+  transform-style: preserve-3d;
+  transition: all .5s linear;
+
+  background-image: radial-gradient(circle 50px at calc(var(--mouseX) * 1px) calc(var(--mouseY) * 1px), var(--c-accent), transparent);
+
+  &:before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, red);
+    background-position: calc(var(--mouseX)*-1px) calc(var(--mouseY)*-1px);
+    background-size: 200% 200%;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+  }
+  
+  &:hover {
+    transition: all .1s linear;
+
+    &:before {
+      opacity: .1;
+    }
+
+    .area__kanji {
+      background-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, red);
+      background-position: calc(var(--mouseX)*-1px) calc(var(--mouseY)*-1px);
+      background-size: 200% 200%;
+      background-clip: text;
+    }
+  }
 
   .area__kanji {
     z-index: 0;
     grid-area: area;
     font-size: 20vmin;
+    line-height: 1;
     color: var(--c-elevation-1);
   }
 
@@ -326,5 +366,6 @@ a {
     grid-area: area;
     font-size: 2rem;
     font-weight: 900;
+    transform: translateZ(2rem);
   }
 }
