--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ menuactive: home
             Fronend Web<span class="color-accent">-</span>Developer
         </h1>
     </div>
-    
+    <script>document.write(rate(5))</script>
     <div class="grid">
         <div class="grid__col grid__col-3">
             <div class="area">
