Moved about to pages folder

--- a/src/_includes/topbar.njk
+++ b/src/_includes/topbar.njk
@@ -1,6 +1,6 @@
 <div class="topbar">
   <div class="topbar__inner">
-    <h1 class="topbar__title"><a href="{{ '/' | url }}">マックス</a></h1>
+    <h1 class="topbar__title"><a href="{{ '/' | url }}" title="Maximilian Boll - Frontend Web-Developer in Mainz/Germany - makkusu.dev">マックス</a></h1>
 
     <label class="mobile-nav-button">
       <input type="checkbox">
