--- a/src/assets/stylesheets/_tooltip.css
+++ b/src/assets/stylesheets/_tooltip.css
@@ -3,12 +3,12 @@
   color: var(--c-accent);
   font-style: italic;
   cursor: help;
-  
+
   &:before {
     content: attr(data-text);
     position: absolute;
     /* display: none; */
-    background-color: var(--c-elevation-1);
+    background-color: var(--c-elevation-0);
     z-index: 50;
     top: 0;
     left: 50%;
@@ -16,16 +16,16 @@
     width: max-content;
     color: var(--c-copy);
     font-family: var(--ff-sans);
-    font-size: .75rem;
+    font-size: 0.75rem;
     font-style: normal;
-    padding: .25em .5em;
-    border-radius: .5em;
+    padding: 0.25em 0.5em;
+    border-radius: 0.5em;
     border: 2px solid var(--c-copy);
     opacity: 0;
-    transition: opacity .3s ease;
+    transition: opacity 0.3s ease;
     pointer-events: none;
   }
-  
+
   &:hover {
     &:before {
       /* display: block; */
