--- a/src/index.njk
+++ b/src/index.njk
@@ -8,10 +8,10 @@ menuactive: home
 
 <div class="content content--wide">
     <div class="intro">
+        <span class="greetings"></span>
         <h1>
-            <span class="greetings"></span><span class="color-accent">,</span> 
             I&rsquo;m Max<span class="color-accent">!</span><br>
-            Fronend Web<span class="color-accent">-</span>Developer
+            Frondend Web<span class="color-accent">-</span>Developer
         </h1>
     </div>
     <script>document.write(rate(5))</script>
