--- a/src/pages/about/about.njk
+++ b/src/pages/about/about.njk
@@ -1,6 +1,6 @@
 ---
 title: About me
-menuactive: about
+permalink: /about/
 sitemap:
   priority: 0.8
 ---
@@ -70,7 +70,7 @@ sitemap:
     <li><a href="{{ '/reading/' | url }}">Reading</a></li>
     <li>Watching</li>
     <li>Essentials</li>
-    <li>Philosophy</li>
+    <li><a href="{{ '/about/philosophy/' | url }}">Philosophy</a></li>
     <li>Techstack</li>
   </ul>
 </div>
