Started restructure of folders and added new collection.js

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -1,5 +1,5 @@
 {% if post.data.cover %}
-  {% set cover = post.url + post.data.cover %}
+  {% set cover = post.data.cover %}
 {% else %}
   {% set cover = fallbackcover %}
 {% endif %}
