--- a/src/pages/about/about.njk
+++ b/src/pages/about/about.njk
@@ -7,7 +7,7 @@ sitemap:
 
 <div class="content content--wide">
   <div class="grid">
-    <div class="grid__col-12 grid__col-4-sm grid__col-5-md">
+    <div class="grid__col-12 grid__col-4-sm grid__col-5-md grid__col--vcentered">
       <div class="about-image">
         <img src="/assets/images/max.webp" alt="Maximilian Boll">
       </div>
@@ -29,38 +29,41 @@ sitemap:
       {# <p>I’m a German based web-developer, <span class="age">??</span> years old and living in the beautiful city of Mainz.</p>
       <p>Besides programming web-applications and games I do a lot of other things. You can read more about my <a href="{{ '/hobbies/' | url }}">hobbies over here</a>.</p>
       <p>Feel free to wander around or drop me a message if you have any questions. You can find my socials on my <a href="{{ '/beacons/' | url }}">beacons page</a>.</p> #}
-      <ul>
-        <li>
-          What I speak<br>
-          <div class="tags" style="margin-top: .5rem;">
-            <div class="tag">German (C2)</div>
-            <div class="tag">English (C1)</div>
-            <div class="tag">Japanese (N5)</div>
-          </div>
-        </li>
-        <li>
-          What I work with<br>
-          <div class="tags" style="margin-top: .5rem;">
-            <div class="tag">Angular</div>
-            <div class="tag">HTML5</div>
-            <div class="tag">CSS3 / SCSS</div>
-            <div class="tag">Javascript</div>
-            <div class="tag">Typescript</div>
-            <div class="tag">MySQL</div>
-          </div>
-        </li>
-        <li>
-          Other devs<br>
-          <div class="tags" style="margin-top: .5rem;">
-            <a href="https://sirtetris.com/" class="tag" target="_blank" rel="nofollow">Tarek</a>
-            <a href="https://lucasbonomi.com/" class="tag" target="_blank" rel="nofollow">Lucas</a>
-            <a href="https://kevin.gimbel.dev/ops/" class="tag" target="_blank" rel="nofollow">Kevin</a>
-            <a href="https://nerddis.co/" class="tag" target="_blank" rel="nofollow">Tim</a>
-          </div>
-        </li>
-      </ul>
     </div>
   </div>
+</div>
+
+<div class="content">
+  <ul>
+    <li>
+      What I speak<br>
+      <div class="tags" style="margin-top: .5rem;">
+        <div class="tag">German (C2)</div>
+        <div class="tag">English (C1)</div>
+        <div class="tag">Japanese (N5)</div>
+      </div>
+    </li>
+    <li>
+      What I work with<br>
+      <div class="tags" style="margin-top: .5rem;">
+        <div class="tag">Angular</div>
+        <div class="tag">HTML5</div>
+        <div class="tag">CSS3 / SCSS</div>
+        <div class="tag">Javascript</div>
+        <div class="tag">Typescript</div>
+        <div class="tag">MySQL</div>
+      </div>
+    </li>
+    <li>
+      Other devs<br>
+      <div class="tags" style="margin-top: .5rem;">
+        <a href="https://sirtetris.com/" class="tag" target="_blank" rel="nofollow">Tarek</a>
+        <a href="https://lucasbonomi.com/" class="tag" target="_blank" rel="nofollow">Lucas</a>
+        <a href="https://kevin.gimbel.dev/ops/" class="tag" target="_blank" rel="nofollow">Kevin</a>
+        <a href="https://nerddis.co/" class="tag" target="_blank" rel="nofollow">Tim</a>
+      </div>
+    </li>
+  </ul>
 </div>
 
 <div class="content">
