--- a/src/pages/about/philosophy.njk
+++ b/src/pages/about/philosophy.njk
@@ -24,6 +24,6 @@ permalink: /about/philosophy/
   <h3>Footnotes</h3>
 
   <ol>
-    <li>12 Rules for Life by Jordan B. Peterson. <a href="https://isbndb.com/book/9780735277458">isbndb.com</a> <a href="#fnref1">↩</a>
+    <li id="fn1">12 Rules for Life by Jordan B. Peterson. <a href="https://isbndb.com/book/9780735277458">isbndb.com</a> <a href="#fnref1">↩</a>
   </ol>
 </div>
