--- a/src/pages/blog/blog.njk
+++ b/src/pages/blog/blog.njk
@@ -1,15 +1,21 @@
 ---
 title: Blog
 menuactive: blog
+permalink: 'blog/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber + 1}}/{% endif %}'
 pagination:
   data: collections.blog
   size: 10
-  reverse: true
   alias: posts
 sitemap:
   priority: 0.9
 canonical: /blog/
 ---
+
+<div class="content content--narrow">
+  <h1 class="page-title" data-kanji="書">Blog</h1>
+
+  <p>Here I share my articles about work, life and all other topic I feel like sharing.</p>
+</div>
 
 <div class="content content--wide">
   <div class="posts">
