Fix Dockerfile configuration, add reading data structure, enhance book styles, and update philosophy and reading pages

--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -10,6 +10,7 @@
 /* Components */
 @import './_404.css';
 @import './_beacons.css';
+@import './_books.css';
 @import './_buttons.css';
 @import './_footer.css';
 @import './_footnotes.css';
